--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@composio/core": "^0.1.53",
+    "@google/genai": "^1.21.0",
+    "@google/generative-ai": "^0.24.1",
     "mermaid": "^11.12.0",
     "next": "15.5.4",
+    "openai": "^5.23.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
