--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
+### LLM configuration
+# Choose provider explicitly: "ollama" or "gemini". If omitted, the app will
+# prefer Ollama when OLLAMA_MODEL is set, otherwise Gemini when GEMINI_API_KEY exists.
+MERLIN_PROVIDER=gemini/ollama
+
+# Gemini
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
-OLLAMA_URL=URL_TO_OLLAMA
+# Optional custom model
+GEMINI_MODEL=gemini-2.5-flash
+
+# Ollama
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=
